@@ -3,33 +3,30 @@ package gerenciador_musica_backend.service;
 import gerenciador_musica_backend.dto.MusicaResumoDTO;
 import gerenciador_musica_backend.dto.PlaylistRequestDTO;
 import gerenciador_musica_backend.dto.PlaylistResponseDTO;
-import gerenciador_musica_backend.model.Musica;
+import gerenciador_musica_backend.exception.PlaylistAcessoNegadoException;
+import gerenciador_musica_backend.exception.PlaylistNaoEncontradaException;
 import gerenciador_musica_backend.model.Playlist;
 import gerenciador_musica_backend.model.PlaylistMusica;
 import gerenciador_musica_backend.model.Usuario;
 import gerenciador_musica_backend.repository.PlaylistRepository;
-import gerenciador_musica_backend.repository.UsuarioRepository;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.server.ResponseStatusException;
-import org.springframework.http.HttpStatus;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PlaylistService {
 
     private final PlaylistRepository playlistRepository;
 
-    public PlaylistService(PlaylistRepository playlistRepository, UsuarioRepository usuarioRepository) {
+    public PlaylistService(PlaylistRepository playlistRepository) {
         this.playlistRepository = playlistRepository;
     }
 
     @Transactional
     public PlaylistResponseDTO criarPlaylist(PlaylistRequestDTO dto) {
-        Usuario usuario = getUsuarioAutenticado();
+        Usuario usuario = obterUsuarioAutenticado();
 
         Playlist playlist = new Playlist();
         playlist.setNome(dto.getNome());
@@ -38,70 +35,67 @@ public class PlaylistService {
 
         Playlist playlistSalva = playlistRepository.save(playlist);
 
-        return toResponseDTO(playlistSalva);
+        return converterParaResponseDTO(playlistSalva);
     }
 
     @Transactional(readOnly = true)
-    public List<PlaylistResponseDTO> listarMinhas() {
-        Usuario usuario = getUsuarioAutenticado();
+    public List<PlaylistResponseDTO> listarMinhasPlaylists() {
+        Usuario usuario = obterUsuarioAutenticado();
 
-        return playlistRepository.findByUsuarioId(usuario.getId())
-                .stream()
-                .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+        List<Playlist> playlists =
+                playlistRepository.findByUsuarioIdOrderByDataCriacaoDesc(usuario.getId());
+
+        return playlists.stream()
+                .map(this::converterParaResponseDTO)
+                .toList();
     }
 
     @Transactional(readOnly = true)
-    public PlaylistResponseDTO buscarPorId(Long id) {
-        Usuario usuario = getUsuarioAutenticado();
+    public PlaylistResponseDTO buscarPlaylist(Long id) {
+        Usuario usuario = obterUsuarioAutenticado();
 
-        Playlist playlist = playlistRepository
-                .findByIdAndUsuarioId(id, usuario.getId())
-                .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND,
-                        "Playlist não encontrada."
-                ));
+        Playlist playlist = playlistRepository.buscarComMusicasPorId(id)
+                .orElseThrow(() -> new PlaylistNaoEncontradaException("Playlist não encontrada."));
 
-        return toResponseDTO(playlist);
+        if (!playlist.getUsuario().getId().equals(usuario.getId())) {
+            throw new PlaylistAcessoNegadoException(
+                    "Você não possui permissão para acessar esta playlist."
+            );
+        }
+
+        return converterParaResponseDTO(playlist);
     }
 
-  private Usuario getUsuarioAutenticado() {
-    Object principal = SecurityContextHolder.getContext()
-            .getAuthentication()
-            .getPrincipal();
+    private Usuario obterUsuarioAutenticado() {
+        Object principal = SecurityContextHolder.getContext()
+                .getAuthentication()
+                .getPrincipal();
 
-    if (principal instanceof Usuario usuario) {
-        return usuario;
+        if (principal instanceof Usuario usuario) {
+            return usuario;
+        }
+
+        throw new RuntimeException("Usuário autenticado não encontrado no contexto de segurança.");
     }
 
-    throw new RuntimeException("Usuário autenticado não encontrado no contexto de segurança.");
-}
-
-    private PlaylistResponseDTO toResponseDTO(Playlist playlist) {
+    private PlaylistResponseDTO converterParaResponseDTO(Playlist playlist) {
         List<MusicaResumoDTO> musicas = playlist.getMusicas()
                 .stream()
-                .map(this::toMusicaResumoDTO)
-                .collect(Collectors.toList());
+                .map(PlaylistMusica::getMusica)
+                .map(musica -> new MusicaResumoDTO(
+                        musica.getIdMusica(),
+                        musica.getTitulo(),
+                        musica.getArtistaPrincipal() != null
+                                ? musica.getArtistaPrincipal().getNome()
+                                : null
+                ))
+                .toList();
 
         return new PlaylistResponseDTO(
                 playlist.getId(),
                 playlist.getNome(),
                 playlist.getDescricao(),
                 musicas
-        );
-    }
-
-    private MusicaResumoDTO toMusicaResumoDTO(PlaylistMusica playlistMusica) {
-        Musica musica = playlistMusica.getMusica();
-
-        String nomeArtista = musica.getArtistaPrincipal() != null
-                ? musica.getArtistaPrincipal().getNome()
-                : null;
-
-        return new MusicaResumoDTO(
-                musica.getIdMusica(),
-                musica.getTitulo(),
-                nomeArtista
         );
     }
 }
